# workpad

./: .env.example  DEPLOYMENT_GUIDE.md  MILESTONE_SYSTEM.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
solana-program/: Anchor.toml  Cargo.toml  QUICK_START.md  deploy.sh
solana-program/programs/milestone-escrow/: Cargo.toml
solana-program/programs/milestone-escrow/src/: lib.rs
src/: App.tsx  index.css  main.tsx  polyfills.ts
src/components/: Auth.tsx  ClientDashboard.tsx  CreateGigModal.tsx  FreelancerDashboard.tsx  GigDetail.tsx  Landing.tsx  MilestoneTracker.tsx  Navigation.tsx  Toast.tsx  TransactionHistory.tsx  WalletProvider.tsx
src/lib/: supabase.ts  x402-fetch.ts
supabase/functions/milestone-orchestrator/: index.ts
supabase/migrations/: 20251210142558_create_workpad_schema.sql  20251210151109_create_workpad_schema_v2.sql  20251210151448_fix_profiles_insert_policy.sql  20251210151501_fix_profile_creation_with_trigger.sql  20251210153301_ensure_profile_trigger_works.sql  20251210170153_fix_gig_accept_policy.sql  20251210171215_add_milestone_support.sql  20251211130832_enable_realtime_for_milestones.sql  20251211132115_add_milestone_submission_notes.sql
