[package]
name = "milestone-escrow"
version = "0.1.0"
description = "Multi-stage escrow program with milestone payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "milestone_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", default-features = false, features = ["token", "associated_token", "token_2022"] }
